--- a/HelpDeskTool/Changelog.txt
+++ b/HelpDeskTool/Changelog.txt
@@ -1,6 +1,6 @@
 ﻿Changes as of 4/10/24
 
-- HelpDeskTool has been migrated to employ the modules System.DirectoryServices and System.DirectoryServices.AccountManagement as apposed to powershell commands. This increases the speed that the application can run and provides more operatunity for bulkier features
+- HelpDeskTool has been migrated to employ the modules System.DirectoryServices and System.DirectoryServices.AccountManagement as apposed to powershell commands. This increases the speed that the application can run and provides more operability for bulkier features
 - The Pass Last Set button has been added into the User Info Button
 - The User Info button is now able to list all active and inactive relationships, including River campus relationships
 - The User Info button is now able to pull the NetID username and the UR Active Directory username if available (jwells2)
